Tôi đã qua môn thầy Nguyễn Mạnh Hùng rồi hahahaahahahahaha

--- a/be/src/main/resources/application.properties
+++ b/be/src/main/resources/application.properties
@@ -30,5 +30,9 @@ spring.jpa.open-in-view=false
 logging.level.org.hibernate.SQL=OFF
 logging.level.org.hibernate.type.descriptor.sql.BasicBinder=OFF
 logging.level.org.hibernate=OFF
+# logging.level.org.springframework.web.client.RestTemplate=DEBUG
 
 spring.main.allow-circular-references=true
+
+# ChessDB.cn API Configuration
+chessdb.api.url=http://www.chessdb.cn/chessdb.php
